<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>pl.jborkows</groupId>
  <artifactId>bilion</artifactId>
  <version>1.0-SNAPSHOT</version>
  <name>Archetype - bilion</name>
  <url>http://maven.apache.org</url>
  <properties>
    <maven.compiler.source>22</maven.compiler.source>
    <maven.compiler.target>22</maven.compiler.target>
    <junit.jupiter.version>5.9.0</junit.jupiter.version>
    <jmh.version>1.37</jmh.version>

  </properties>
  <dependencies>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>${junit.jupiter.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>${junit.jupiter.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.openjdk.jmh</groupId>
      <artifactId>jmh-core</artifactId>
      <version>${jmh.version}</version>
    </dependency>
    <dependency>
      <groupId>org.openjdk.jmh</groupId>
      <artifactId>jmh-generator-annprocess</artifactId>
      <version>${jmh.version}</version>
    </dependency>

  </dependencies>
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.4.0</version>
        <configuration>
          <useModulePath>true</useModulePath>
          <argLine>--enable-preview  --add-modules=jdk.incubator.vector</argLine>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-failsafe-plugin</artifactId>
        <version>3.4.0</version>
        <configuration>
          <useModulePath>true</useModulePath>
          <argLine>--enable-preview  --add-modules=jdk.incubator.vector</argLine>
        </configuration>

        <executions>
          <execution>
            <goals>
              <goal>integration-test</goal>
              <goal>verify</goal>
            </goals>
          </execution>
        </executions>

      </plugin>
      <plugin>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.4.2</version> <!-- Use the latest version available -->
        <configuration>
          <archive>
            <manifest>
              <addClasspath>false</addClasspath>
              <mainClass>pl.jborkows.bilion.Main</mainClass> <!-- Replace with your package and class name -->
            </manifest>
          </archive>
        </configuration>
      </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.13.0</version> <!-- Ensure this is a version that supports the 'release' attribute -->
          <configuration>
            <release>22</release>
            <compilerArgs>--enable-preview</compilerArgs>
            <compilerArgs>--add-modules=jdk.incubator.vector</compilerArgs>
          </configuration>
        </plugin>

    </plugins>
  </build>

</project>
